--- a/src/main/webapp/WEB-INF/view/affair_module/show.html
+++ b/src/main/webapp/WEB-INF/view/affair_module/show.html
@@ -41,7 +41,7 @@
 			$('#endPage').click(function(){
 					location.href='${rc.contextPath}/affair_module/show?page='+(${allPages});
 			});
-			$('.delete-modlue').click(function(){
+			$('.delete-module').click(function(){
 				location.href = '${rc.contextPath}/affair_module/delete/'+$(this).parent().parent().siblings('.module-id').html();
 			});
 			
