--- a/src/main/webapp/WEB-INF/view/index.html
+++ b/src/main/webapp/WEB-INF/view/index.html
@@ -55,7 +55,7 @@
 			<div
 				class="navbar-text nav-item navbar-left hidden-md hidden-sm hidden-xs"
 				style="margin-top: 15px;">
-				上海&nbsp;&nbsp;&nbsp;&nbsp;<img src="img/1.gif" class="" />&nbsp;&nbsp;&nbsp;&nbsp;24°
+				上海&nbsp;&nbsp;&nbsp;&nbsp;<img src="${rc.contextPath}/img/1.gif" class="" />&nbsp;&nbsp;&nbsp;&nbsp;24°
 			</div>
 
 		</div>
