--- a/src/main/webapp/WEB-INF/view/email/deletemail.html
+++ b/src/main/webapp/WEB-INF/view/email/deletemail.html
@@ -12,6 +12,16 @@
 <link rel="stylesheet" href="${rc.contextPath}/css/global.css" />
 <script type="text/javascript" src="${rc.contextPath}/js/global.js"></script>
 <script type="text/javascript" src="${rc.contextPath}/js/Calendar3.js"></script>
+<script type="text/javascript">
+$(function(){
+	$('.seebut').click(function() {
+		var id = $(this).prev().val();
+		location.href='${rc.contextPath}/showmessage/'+id;
+	});
+}); 
+	 
+
+</script>
 </head>
 <body>
 
@@ -69,6 +79,7 @@
 							<td width="120px" class="hidden-xs text-center">表格数据</td>
 							<td width="120px">
 								<span class="btn-group btn-group-xs text-center">
+									<input type="hidden" value="${m.messageId}">
 									<button type="button" class="btn btn-default">查看</button>
 									<button type="button" class="btn btn-default">回复</button>
 									<button type="button" class="btn btn-danger">删除</button>
