--- a/src/main/webapp/WEB-INF/view/affair/detail.html
+++ b/src/main/webapp/WEB-INF/view/affair/detail.html
@@ -69,7 +69,7 @@
 											<#list affair.affairChains as chain>
 											<tr>
 												<td>${chain.affairChainOrder}</td>
-												<td>${chain.user.nickname}</td>
+												<td>${chain.approver.nickname}</td>
 												<td>${chain.affairChainComment}</td>
 												<td>
 													<#if chain.affairChainStatus=0>
