--- a/src/main/webapp/WEB-INF/view/permission/edit.html
+++ b/src/main/webapp/WEB-INF/view/permission/edit.html
@@ -33,7 +33,7 @@
 					placeholder="${currentPermission.permissionId}" />
 				<!-- 权限名 -->
 				<input type="text" name="permissionName" class="form-control"
-					placeholder="${currentPermission.permissionName}" /> <hr />
+					placeholder="${currentPermission.permissionName}" value="${currentPermission.permissionName}"/> <hr />
 
 				<!-- 新权限操作设置 -->
 				<div id="alloperates">
