--- a/src/main/webapp/WEB-INF/view/email/sentemail.html
+++ b/src/main/webapp/WEB-INF/view/email/sentemail.html
@@ -74,7 +74,9 @@ $(function(){
 									type="checkbox" name="id" /></td>
 								<td class="text-center">${m.messageTitle}</td>
 
-								<td width="120px" class="hidden-xs text-center">${m.reciver}</td>
+								<td width="120px" class="hidden-xs text-center">
+									<#list m.users as mu>${mu.nickname}&nbsp;</#list>
+								</td>
 								
 								<td width="120px" class="hidden-xs text-center">${m.messageTime}</td>
 								<td width="120px">
