--- a/src/main/webapp/WEB-INF/view/index.html
+++ b/src/main/webapp/WEB-INF/view/index.html
@@ -12,6 +12,27 @@
 <link rel="stylesheet" href="${rc.contextPath}/css/global.css" />
 <link rel="stylesheet" href="${rc.contextPath}/css/index.css" />
 <script type="text/javascript" src="${rc.contextPath}/js/global.js"></script>
+<script type="text/javascript">
+			$(function() {
+			
+				<#if daguoka??>
+					$("#attendence").attr("disabled","disabled")
+					<#else>
+					$("#attendence").removeAttr("disabled");
+				</#if>
+				$('#attendence').click(function() {
+					location.href = '${rc.contextPath}/roster/addData';
+				});
+				if(location.href.indexOf("success")!=-1){
+					var success=${success}+'';
+					if(success==1){
+						alert("打卡成功")
+					}
+					$("#attendence").attr("disabled","disabled")
+				}
+				
+			});
+		</script>
 </head>
 <body>
 
@@ -79,6 +100,7 @@
 						class="caret"></span>
 				</a>
 					<ul class="dropdown-menu nav-dropdown-menu">
+						<li><button id="attendence" class="btn btn-success"  >打卡</button></li>
 						<li class="dropdown-menu-item nav-dropdown-menu-item"><a
 							href="" style="color: #fff;"><img
 								src="${rc.contextPath}/img/48323.png" height="20px"
